--- a/portfolio.html
+++ b/portfolio.html
@@ -214,14 +214,73 @@
     </main>
     <footer class="footer">
       <!-- Logo Footer -->
-      <div class="container container-footer">
-        <a class="link logo link-footer logo-first-footer" href="./index.html"
-          >Web<span class="logo-next-footer">Studio</span>
-        </a>
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container flex-list container-footer">
+        <div class="logo-description">
+          <a class="link logo link-footer logo-first-footer" href="./index.html"
+            >Web<span class="logo-next-footer">Studio</span>
+          </a>
+          <p class="text text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <h3 class="little-title socials-title">Social media</h3>
+          <ul class="socials-list flex-list list">
+            <li class="socials-item">
+              <a
+                class="socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener no-referrer"
+                arial-label="Instagram icon"
+              >
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a
+                class="socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener no-referrer"
+                arial-label="Twitter icon"
+              >
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a
+                class="socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener no-referrer"
+                arial-label="Facebook icon"
+              >
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a
+                class="socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener no-referrer"
+                arial-label="Linkedin icon"
+              >
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
