--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,12 @@
   <body>
     <header class="header">
       <!-- Logo, Menu Nav -->
-      <div class="container header-container">
-        <nav class="main-menu">
-          <a class="link logo logo-link-nav logo-first-nav" href="./index.html"
+      <div class="header-container container flex-list">
+        <nav class="main-menu flex-list">
+          <a class="logo-link-nav logo-first-nav link logo" href="./index.html"
             >Web<span class="logo-next-nav">Studio</span>
           </a>
-          <ul class="list flex-list main-menu-list">
+          <ul class="main-menu-list flex-list list">
             <li class="main-menu-item">
               <a class="link main-menu-link" href="./index.html">Studio</a>
             </li>
@@ -47,14 +47,14 @@
           </ul>
         </nav>
         <address class="address-list">
-          <ul class="list flex-list menu-contacts">
+          <ul class="menu-contacts flex-list list">
             <li>
-              <a class="link contacts-link" href="mailto:info@devstudio.com"
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a class="link contacts-link" href="tel:+110001111111"
+              <a class="contacts-link link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -64,10 +64,10 @@
     </header>
     <main>
       <!-- Section -->
-      <section class="section portfolio-section">
-        <div class="container portfolio-container">
+      <section class="portfolio-section section">
+        <div class="portfolio-container container">
           <h1 class="hidden-title">Filters</h1>
-          <ul class="list flex-list button-list">
+          <ul class="button-list flex-list list">
             <li>
               <button class="button filters-button" type="button">All</button>
             </li>
@@ -90,9 +90,9 @@
               </button>
             </li>
           </ul>
-          <ul class="list flex-list portfolio-list">
+          <ul class="portfolio-list flex-list list">
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/portfolio/section-1/img-1.jpg"
                   alt="BankApp"
@@ -107,7 +107,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/portfolio/section-1/img-2.jpg"
                   alt="Smartphones"
@@ -120,7 +120,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/portfolio/section-1/img-3.jpg"
                   alt="Notebook and smartphone"
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/portfolio/section-2/img-1.jpg"
                   alt="Driver"
@@ -146,7 +146,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/portfolio/section-2/img-2.jpg"
                   alt="Smartphone theme"
@@ -159,7 +159,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/portfolio/section-2/img-3.jpg"
                   alt="A girl on an online course"
@@ -172,7 +172,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/portfolio/section-3/img-1.jpg"
                   alt="Instagram Stories"
@@ -187,7 +187,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/portfolio/section-3/img-2.jpg"
                   alt="Bag with food"
@@ -200,7 +200,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/portfolio/section-3/img-3.jpg"
                   alt="Fresh Coffee"
@@ -218,7 +218,7 @@
     </main>
     <footer class="footer">
       <!-- Logo Footer -->
-      <div class="container flex-list container-footer">
+      <div class="footer-container container flex-list">
         <div class="logo-description">
           <a class="link logo link-footer logo-first-footer" href="./index.html"
             >Web<span class="logo-next-footer">Studio</span>
@@ -228,15 +228,16 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="social-media">
-          <h3 class="little-title socials-title">Social media</h3>
+        <div class="socials-wrapper">
+          <p class="socials-description">Social media</p>
           <ul class="socials-list flex-list list">
             <li class="socials-item">
               <a
-                class="socials-link link"
+                class="socials-link flex-list link"
                 href=""
                 target="_blank"
                 rel="noopener no-referrer"
+                aria-label="Instagram icon"
               >
                 <svg class="socials-icon" width="24" height="24">
                   <use href="./images/icons.svg#instagram"></use>
@@ -245,10 +246,11 @@
             </li>
             <li class="socials-item">
               <a
-                class="socials-link link"
+                class="socials-link flex-list link"
                 href=""
                 target="_blank"
                 rel="noopener no-referrer"
+                aria-label="Twitter icon"
               >
                 <svg class="socials-icon" width="24" height="24">
                   <use href="./images/icons.svg#twitter"></use>
@@ -257,10 +259,11 @@
             </li>
             <li class="socials-item">
               <a
-                class="socials-link link"
+                class="socials-link flex-list link"
                 href=""
                 target="_blank"
                 rel="noopener no-referrer"
+                aria-label="Facebook icon"
               >
                 <svg class="socials-icon" width="24" height="24">
                   <use href="./images/icons.svg#facebook"></use>
@@ -269,10 +272,11 @@
             </li>
             <li class="socials-item">
               <a
-                class="socials-link link"
+                class="socials-link flex-list link"
                 href=""
                 target="_blank"
                 rel="noopener no-referrer"
+                aria-label="Linkedin icon"
               >
                 <svg class="socials-icon" width="24" height="24">
                   <use href="./images/icons.svg#linkedin"></use>
